INCLUDE_DIRECTORIES(../includes/ ./)
#ADD_LIBRARY (helloworld MODULE helloworld.cpp)
#ADD_LIBRARY (rot13 MODULE rot13.cpp)
#ADD_LIBRARY (loutre MODULE loutre.cpp)
#ADD_LIBRARY (hooktests MODULE HookTests.cpp)
ADD_LIBRARY (SSL MODULE SSL.cpp SSLClientSocket.cpp)
#ADD_LIBRARY (maintenance MODULE maintenance.cpp)
ADD_LIBRARY (ModPHP MODULE modphp.cpp)
ADD_LIBRARY (AutoIndex MODULE autoindex.cpp)
#ADD_LIBRARY(PriorityTest1 MODULE priorityTest1.cpp)
#ADD_LIBRARY(PriorityTest2 MODULE priorityTest2.cpp)
